# mlichat

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/core/: config.py
app/routers/: pages.py  websocket.py
app/services/: crypto.py  websocket_manager.py
app/templates/: chat.html  index.html
tests/: test_app.py
